--- a/Trek.Net.csproj
+++ b/Trek.Net.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.Modal" Version="7.0.0-preiew.2" />
+    <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
